--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             const startTime = performance.now();
 
             try {
-                const response = await fetch(`https://${host}`, { mode: 'no-cors' }); // No-cors mode for GitHub Pages
+                const response = await fetch(`${host}`, { mode: 'no-cors' }); // No-cors mode for GitHub Pages
                 const latency = Math.round(performance.now() - startTime);
                 pingResults[host] = latency;
 
